src/main/java/org/example/output/generated/ObjectOrientedParser.java
// Generated from ObjectOrientedParser.g4 by ANTLR 4.13.1
package org.example.output.generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ObjectOrientedParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLASS=1, PUBLIC=2, PRIVATE=3, FINAL=4, VOID=5, BOOLEAN=6, CHAR=7, INT=8, 
		LONG=9, FLOAT=10, DOUBLE=11, IF=12, ELSE=13, FOR=14, WHILE=15, DO=16, 
		RETURN=17, PRINTF=18, SCANF=19, BOOLEAN_LITERAL=20, INTEGER_LITERAL=21, 
		FLOAT_LITERAL=22, CHAR_LITERAL=23, STRING_LITERAL=24, IDENTIFIER=25, LPAREN=26, 
		RPAREN=27, LBRACE=28, RBRACE=29, LBRACK=30, RBRACK=31, SEMI=32, COMMA=33, 
		DOT=34, ASSIGN=35, GT=36, LT=37, BANG=38, TILDE=39, QUESTION=40, COLON=41, 
		EQUAL=42, LE=43, GE=44, NOTEQUAL=45, AND=46, OR=47, INC=48, DEC=49, ADD=50, 
		SUB=51, MUL=52, DIV=53, BITAND=54, BITOR=55, CARET=56, MOD=57, ADD_ASSIGN=58, 
		SUB_ASSIGN=59, MUL_ASSIGN=60, DIV_ASSIGN=61, AND_ASSIGN=62, OR_ASSIGN=63, 
		XOR_ASSIGN=64, MOD_ASSIGN=65, LINE_COMMENT=66, BLOCK_COMMENT=67, WS=68, 
		NEW=69, THIS=70, NULL_LITERAL=71, BREAK=72, CONTINUE=73, PACKAGE=74, IMPORT=75, 
		EXTENDS=76, IMPLEMENTS=77, INTERFACE=78, ENUM=79, PROTECTED=80, STATIC=81, 
		ABSTRACT=82, NATIVE=83, SYNCHRONIZED=84, TRANSIENT=85, VOLATILE=86, BYTE=87, 
		SHORT=88, SUPER=89, THROWS=90, DEFAULT=91, ELLIPSIS=92, VAR=93, ASSERT=94, 
		TRY=95, SWITCH=96, THROW=97, CATCH=98, FINALLY=99, CASE=100, ARROW=101, 
		LSHIFT_ASSIGN=102, RSHIFT_ASSIGN=103, URSHIFT_ASSIGN=104, INSTANCEOF=105, 
		LSHIFT=106, RSHIFT=107, URSHIFT=108;
	public static final int
		RULE_compilationUnit = 0, RULE_packageDeclaration = 1, RULE_importDeclaration = 2, 
		RULE_qualifiedName = 3, RULE_typeDeclaration = 4, RULE_classDeclaration = 5, 
		RULE_interfaceDeclaration = 6, RULE_enumDeclaration = 7, RULE_modifier = 8, 
		RULE_typeParameters = 9, RULE_typeParameter = 10, RULE_typeList = 11, 
		RULE_type = 12, RULE_primitiveType = 13, RULE_classOrInterfaceType = 14, 
		RULE_typeArguments = 15, RULE_typeArgument = 16, RULE_classBody = 17, 
		RULE_classBodyDeclaration = 18, RULE_memberDeclaration = 19, RULE_interfaceBody = 20, 
		RULE_interfaceBodyDeclaration = 21, RULE_interfaceMemberDeclaration = 22, 
		RULE_constantDeclaration = 23, RULE_interfaceMethodDeclaration = 24, RULE_enumBody = 25, 
		RULE_enumConstantList = 26, RULE_enumConstant = 27, RULE_enumBodyDeclarations = 28, 
		RULE_fieldDeclaration = 29, RULE_variableDeclaratorList = 30, RULE_variableDeclarator = 31, 
		RULE_variableInitializer = 32, RULE_arrayInitializer = 33, RULE_methodDeclaration = 34, 
		RULE_constructorDeclaration = 35, RULE_typeOrVoid = 36, RULE_formalParameterList = 37, 
		RULE_formalParameter = 38, RULE_lastFormalParameter = 39, RULE_variableDeclaratorId = 40, 
		RULE_qualifiedNameList = 41, RULE_block = 42, RULE_blockStatement = 43, 
		RULE_localVariableDeclarationStatement = 44, RULE_statement = 45, RULE_ioStatement = 46, 
		RULE_expressionStatement = 47, RULE_catchClause = 48, RULE_catchType = 49, 
		RULE_finallyBlock = 50, RULE_forControl = 51, RULE_forInit = 52, RULE_enhancedForControl = 53, 
		RULE_forUpdate = 54, RULE_switchBlockStatementGroup = 55, RULE_switchLabel = 56, 
		RULE_constantExpression = 57, RULE_enumConstantName = 58, RULE_primary = 59, 
		RULE_ioExpression = 60, RULE_literal = 61, RULE_newExpression = 62, RULE_arguments = 63, 
		RULE_expressionList = 64, RULE_expression = 65, RULE_lambdaExpression = 66, 
		RULE_lambdaParameters = 67, RULE_lambdaBody = 68, RULE_assignmentExpression = 69, 
		RULE_assignmentOperator = 70, RULE_conditionalExpression = 71, RULE_conditionalOrExpression = 72, 
		RULE_conditionalAndExpression = 73, RULE_inclusiveOrExpression = 74, RULE_exclusiveOrExpression = 75, 
		RULE_andExpression = 76, RULE_equalityExpression = 77, RULE_relationalExpression = 78, 
		RULE_shiftExpression = 79, RULE_additiveExpression = 80, RULE_multiplicativeExpression = 81, 
		RULE_unaryExpression = 82, RULE_preIncrementExpression = 83, RULE_preDecrementExpression = 84, 
		RULE_unaryExpressionNotPlusMinus = 85, RULE_postfixExpression = 86, RULE_methodCall = 87, 
		RULE_methodCallTail = 88, RULE_castExpression = 89, RULE_parExpression = 90;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilationUnit", "packageDeclaration", "importDeclaration", "qualifiedName", 
			"typeDeclaration", "classDeclaration", "interfaceDeclaration", "enumDeclaration", 
			"modifier", "typeParameters", "typeParameter", "typeList", "type", "primitiveType", 
			"classOrInterfaceType", "typeArguments", "typeArgument", "classBody", 
			"classBodyDeclaration", "memberDeclaration", "interfaceBody", "interfaceBodyDeclaration", 
			"interfaceMemberDeclaration", "constantDeclaration", "interfaceMethodDeclaration", 
			"enumBody", "enumConstantList", "enumConstant", "enumBodyDeclarations", 
			"fieldDeclaration", "variableDeclaratorList", "variableDeclarator", "variableInitializer", 
			"arrayInitializer", "methodDeclaration", "constructorDeclaration", "typeOrVoid", 
			"formalParameterList", "formalParameter", "lastFormalParameter", "variableDeclaratorId", 
			"qualifiedNameList", "block", "blockStatement", "localVariableDeclarationStatement", 
			"statement", "ioStatement", "expressionStatement", "catchClause", "catchType", 
			"finallyBlock", "forControl", "forInit", "enhancedForControl", "forUpdate", 
			"switchBlockStatementGroup", "switchLabel", "constantExpression", "enumConstantName", 
			"primary", "ioExpression", "literal", "newExpression", "arguments", "expressionList", 
			"expression", "lambdaExpression", "lambdaParameters", "lambdaBody", "assignmentExpression", 
			"assignmentOperator", "conditionalExpression", "conditionalOrExpression", 
			"conditionalAndExpression", "inclusiveOrExpression", "exclusiveOrExpression", 
			"andExpression", "equalityExpression", "relationalExpression", "shiftExpression", 
			"additiveExpression", "multiplicativeExpression", "unaryExpression", 
			"preIncrementExpression", "preDecrementExpression", "unaryExpressionNotPlusMinus", 
			"postfixExpression", "methodCall", "methodCallTail", "castExpression", 
			"parExpression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'componenteModelo'", "'painelExterno'", "'circuitoInterno'", "'circuitoIntegradoFinal'", 
			"'sinalDeAck'", "'estadoEnergia'", "'codigoPostDisplay'", "'frequenciaMHz'", 
			"'enderecoDeBlocoEmDisco'", "'tensaoVolts'", "'taxaTransferenciaGBpsPrecisa'", 
			"'seSinalAtivo'", "'rotaDeDadosAlternativa'", "'paraCadaPinoNoConector'", 
			"'enquantoConexaoAtiva'", "'executarOperacao'", "'transmitirDadoPeloBarramento'", 
			"'mostrarDisplay'", "'lerEntradaSensor'", null, null, null, null, null, 
			null, "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", "'.'", 
			"'='", "'>'", "'<'", "'!'", "'~'", "'?'", "':'", "'=='", "'<='", "'>='", 
			"'!='", "'&&'", "'||'", "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "'&'", 
			"'|'", "'^'", "'%'", "'+='", "'-='", "'*='", "'/='", "'&='", "'|='", 
			"'^='", "'%='", null, null, null, "'new'", "'this'", "'null'", "'interromperProcesso'", 
			"'continuarFluxo'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CLASS", "PUBLIC", "PRIVATE", "FINAL", "VOID", "BOOLEAN", "CHAR", 
			"INT", "LONG", "FLOAT", "DOUBLE", "IF", "ELSE", "FOR", "WHILE", "DO", 
			"RETURN", "PRINTF", "SCANF", "BOOLEAN_LITERAL", "INTEGER_LITERAL", "FLOAT_LITERAL", 
			"CHAR_LITERAL", "STRING_LITERAL", "IDENTIFIER", "LPAREN", "RPAREN", "LBRACE", 
			"RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", "ASSIGN", "GT", 
			"LT", "BANG", "TILDE", "QUESTION", "COLON", "EQUAL", "LE", "GE", "NOTEQUAL", 
			"AND", "OR", "INC", "DEC", "ADD", "SUB", "MUL", "DIV", "BITAND", "BITOR", 
			"CARET", "MOD", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", 
			"AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", "MOD_ASSIGN", "LINE_COMMENT", 
			"BLOCK_COMMENT", "WS", "NEW", "THIS", "NULL_LITERAL", "BREAK", "CONTINUE", 
			"PACKAGE", "IMPORT", "EXTENDS", "IMPLEMENTS", "INTERFACE", "ENUM", "PROTECTED", 
			"STATIC", "ABSTRACT", "NATIVE", "SYNCHRONIZED", "TRANSIENT", "VOLATILE", 
			"BYTE", "SHORT", "SUPER", "THROWS", "DEFAULT", "ELLIPSIS", "VAR", "ASSERT", 
			"TRY", "SWITCH", "THROW", "CATCH", "FINALLY", "CASE", "ARROW", "LSHIFT_ASSIGN", 
			"RSHIFT_ASSIGN", "URSHIFT_ASSIGN", "INSTANCEOF", "LSHIFT", "RSHIFT", 
			"URSHIFT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ObjectOrientedParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ObjectOrientedParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompilationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ObjectOrientedParser.EOF, 0); }
		public PackageDeclarationContext packageDeclaration() {
			return getRuleContext(PackageDeclarationContext.class,0);
		}
		public List<ImportDeclarationContext> importDeclaration() {
			return getRuleContexts(ImportDeclarationContext.class);
		}
		public ImportDeclarationContext importDeclaration(int i) {
			return getRuleContext(ImportDeclarationContext.class,i);
		}
		public List<TypeDeclarationContext> typeDeclaration() {
			return getRuleContexts(TypeDeclarationContext.class);
		}
		public TypeDeclarationContext typeDeclaration(int i) {
			return getRuleContext(TypeDeclarationContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ObjectOrientedParserListener ) ((ObjectOrientedParserListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ObjectOrientedParserListener ) ((ObjectOrientedParserListener)listener).exitCompilationUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObjectOrientedParserVisitor ) return ((ObjectOrientedParserVisitor<? extends T>)visitor).visitCompilationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PACKAGE) {
				{
				setState(182);
				packageDeclaration();
				}
			}

			setState(188);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(185);
				importDeclaration();
				}
				}
				setState(190);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(194);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0) || ((((_la - 78)) & ~0x3f) == 0 && ((1L << (_la - 78)) & 511L) != 0)) {
				{
				{
				setState(191);
				typeDeclaration();
				}
				}
				setState(196);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(197);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PackageDeclarationContext extends ParserRuleContext {
		public TerminalNode PACKAGE() { return getToken(ObjectOrientedParser.PACKAGE, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(ObjectOrientedParser.SEMI, 0); }
		public PackageDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ObjectOrientedParserListener ) ((ObjectOrientedParserListener)listener).enterPackageDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ObjectOrientedParserListener ) ((ObjectOrientedParserListener)listener).exitPackageDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObjectOrientedParserVisitor ) return ((ObjectOrientedParserVisitor<? extends T>)visitor).visitPackageDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackageDeclarationContext packageDeclaration() throws RecognitionException {
		PackageDeclarationContext _localctx = new PackageDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_packageDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(199);
			match(PACKAGE);
			setState(200);
			qualifiedName();
			setState(201);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportDeclarationContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(ObjectOrientedParser.IMPORT, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(ObjectOrientedParser.SEMI, 0); }
		public TerminalNode DOT() { return getToken(ObjectOrientedParser.DOT, 0); }
		public TerminalNode MUL() { return getToken(ObjectOrientedParser.MUL, 0); }
		public ImportDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ObjectOrientedParserListener ) ((ObjectOrientedParserListener)listener).enterImportDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ObjectOrientedParserListener ) ((ObjectOrientedParserListener)listener).exitImportDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObjectOrientedParserVisitor ) return ((ObjectOrientedParserVisitor<? extends T>)visitor).visitImportDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportDeclarationContext importDeclaration() throws RecognitionException {
		ImportDeclarationContext _localctx = new ImportDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203);
			match(IMPORT);
			setState(204);
			qualifiedName();
			setState(207);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOT) {
				{
				setState(205);
				match(DOT);
				setState(206);
				match(MUL);
				}
			}

			setState(209);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QualifiedNameContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(ObjectOrientedParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ObjectOrientedParser.IDENTIFIER, i);
		}
		public List<TerminalNode> DOT() { return getTokens(ObjectOrientedParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(ObjectOrientedParser.DOT, i);
		}
		public QualifiedNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualifiedName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ObjectOrientedParserListener ) ((ObjectOrientedParserListener)listener).enterQualifiedName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ObjectOrientedParserListener ) ((ObjectOrientedParserListener)listener).exitQualifiedName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObjectOrientedParserVisitor ) return ((ObjectOrientedParserVisitor<? extends T>)visitor).visitQualifiedName(this);
			else return visitor.visitChildren(this);
		}
	}
